--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -26,7 +26,7 @@
             <div class="col-7">
                 <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded p-5">
                     <div class=" align-items-center text-center mt-2">
-                        <h1 class="">Inicio de sesion</h1>
+                        <h1 class="">Registro de usuario</h1>
                     </div>
                     <form method="post" class="mt-4">
                         {% csrf_token %}
