--- a/productos/templates/agregar.html
+++ b/productos/templates/agregar.html
@@ -10,9 +10,36 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <style>
+            @keyframes fadeIn {
+                from{opacity: 0;}
+                to{opacity: 1;}
+            }
+            @keyframes slide {
+                from{transform: translateX(100%);}
+                to{opacity: 1;}
+            }
+
+            @keyframes zoomIn {
+                from{transform: translateX(100%);}
+                to{opacity: 1;}
+            }
+
+            @keyframes zoomOut {
+                from{
+                    opacity: 1;
+                    transform: scale(1.0);
+                }
+                to{
+                    opacity: 0;
+                    transform: scale(0.8);
+                }
+            }
+
+        </style>
 </head>
 
-<body>
+<body  style="animation: fadeIn 5.0s forwards;">
     <h1>Nuevo producto</h1>
     <form method="post">
         {% csrf_token %}
@@ -22,11 +49,22 @@
     <br>
     <h1>    Lista de productos  </h1>
     <div id="productos"></div>
+    <a href="https://www.utez.edu.mx">Salir del sitio</a>
 
     <script>
-        //Funcion para obtener el JSON
+        document.querySelectorAll('a').forEach(link =>{
+            link.addEventListener('click', function(event){
+                event.preventDefault();
+                document.body.style.animation = 'zoomOut 5.0s forwards';
+                setTimeout(() => {
+                    window.location.href = this.href;
+                }, 500);
+            })
+        })
+    </script>
+
+    <script>
         function cargarProductos(){
-            //fetch para obtener info
             fetch('/productos/api/get')
                 .then(response => response.json())
                 .then(data => {
